# mon-livre-recettes

./: .gitignore  docker-compose.yml
.github/workflows/: build.yml
backend/: Dockerfile  pyproject.toml
backend/config/: settings.py  urls.py
backend/livrerecettes_app/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/livrerecettes_app/migrations/: 0001_initial.py  0002_recette_delete_recipe.py
docker/: Dockerfile.backend  Dockerfile.frontend  frontend-entrypoint.sh
docker/nginx/: nginx.conf
docker/prometheus/: prometheus.yml
frontend/: package-lock.json  package.json
