[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "PatriciaKKE",email = "kamleuemmerencia@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (>=5.2.1,<6.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "django-prometheus (>=2.3.1,<3.0.0)",
    "dj-database-url (>=3.0.0,<4.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
